API: Refactoring of the API. - Removed obsoleted NIPXXImpl classes. The NIPXX classes are now generating GenericEvent and GenreicTag classes, and not their concrete classes from the event module. - We introduce the GenericEvent.convert method to convert a GenericEvent to a subclass instance. - Similarly, GenericTag.convert will return the corresponding subclass instance.
EVENT: Refactoring of the event module.
- The event classes will serve as utility classes, with helper functions to retrieve relevant information from the event class.
- Rewrote the validation methods to be more conform to the specification (kind, tags, and content validations)
- Added LabelNamespaceTag and LabelTag concrete tag classes